tests/fixtures/invalid/hex_set.py
# Cannot call hex() with Set[int]
x = hex({1, 2, 3})
